spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,7 +140,7 @@ input, select, textarea {
 		color: #787878;
 		font-weight: 400;
 		line-height: 1em;
-		margin: 0 0 1em 0;
+		margin: 0 0 0.5em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -2692,8 +2692,8 @@ input, select, textarea {
 
 		#main > section {
 			border-top: solid 2px #efefef;
-			margin: 4em 0 0 0;
-			padding: 4em 0 0 0;
+			margin: 1.5em 0 0 0;
+			padding: 1.5em 0 0 0;
 		}
 
 			#main > section:first-child {
